# cmake_examples

./: CMakeLists.txt  main.cc
lib/: CMakeLists.txt  lib.cc  my_lib-config.cmake
lib/include/: lib.h
